# aicorp

./: .env.backup  .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  DISTRIBUTION_README.txt  INSTALL.md  MANIFEST.in  Makefile  README.md  aicorp  pyproject.toml  requirements.txt  verify_setup.py
config/: system_prompt.txt
docs/: README.md
examples/: basic_usage.py
scripts/: dist.sh  install.sh  uninstall.sh
src/aicorp/: __init__.py  api_client.py  cli.py  config.py  config_manager.py  logger.py
tests/: test_api_client.py  test_config.py  test_logger.py
