[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicorp-client"
version = "1.2.0"
description = "A secure, modern Python client for AI Corp's WebUI API with comprehensive input validation, smart installation, and professional system management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "@arturdj", email = "artur.rossa@azion.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "urllib3>=1.26.0,<2.0.0",  # Fix LibreSSL compatibility warning
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.scripts]
aicorp = "aicorp.cli:main"

[project.urls]
Homepage = "https://github.com/aicorp/aicorp-client"
Repository = "https://github.com/aicorp/aicorp-client.git"
Documentation = "https://aicorp-client.readthedocs.io"
"Bug Tracker" = "https://github.com/aicorp/aicorp-client/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=aicorp --cov-report=term-missing"
